--- a/webots/plugins/physics/ekf/Makefile
+++ b/webots/plugins/physics/ekf/Makefile
@@ -1,25 +1,23 @@
-# Copyright 1996-2023 Cyberbotics Ltd.
+# Custom physics plugin for Hackflight simulator using Estimated Kalman Filter
+# for state and standard C++ PID controllers
 #
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
+#  Copyright (C) 2024 Simon D. Levy
 #
-#     https://www.apache.org/licenses/LICENSE-2.0
+#  This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, in version 3.
 #
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
-# Webots Makefile system 
+#  This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+# GNU General Public License for more details.
 #
-# You may add some variable definitions hereafter to customize the build process
-# See documentation in $(WEBOTS_HOME_PATH)/resources/Makefile.include
+# You should have received a copy of the GNU General Public License
+# along with this program. If not, see <http:--www.gnu.org/licenses/>.
 
 CFLAGS = -O3 -std=c++11 -Wall -Wextra
 
-INCLUDE = -I../../../../src
+INCLUDE = -I../../../../src -I$(HOME)/Documents/Arduino/libraries/TinyEKF/src
 
 CXX_SOURCES = ekf.cpp ../support.cpp
 
