--- a/webots/controllers/snn/Makefile
+++ b/webots/controllers/snn/Makefile
@@ -49,6 +49,9 @@ run:
  	love . -i '{"source":"request","port":$(VIZ_PORT),"host":$(VIZ_HOST)}' \
      	-n $(VIZ_NET) --show_spike_count --remove_unnecessary_neuron \
     		--set_num_screen_shot 0 > /dev/null
+min:
+	webots ../../worlds/snn.wbt &
+	/usr/local/webots/webots-controller --stdout-redirect $(NAME)
 
 plot:
 	./plot.py
