--- a/sketches/nano/Makefile
+++ b/sketches/nano/Makefile
@@ -3,7 +3,7 @@ SKETCH = nano
 # For complete list run arduino-cli board listall
 FQBN = esp32:esp32:um_tinypico
 
-PORT = /dev/ttyUSB1
+PORT = /dev/ttyACM0
 
 LIBS = $(HOME)/Documents/Arduino/libraries 
 
