Added missing sources to sim plugin

--- a/webots/plugins/physics/snn/Makefile
+++ b/webots/plugins/physics/snn/Makefile
@@ -32,6 +32,7 @@ FDIR = $(HOME)/Desktop/framework
 PDIR =  $(FDIR)/processors/risp
 
 INCLUDE += -I$(FDIR)/include -I$(FDIR)/include/utils -I$(FDIR)/cpp-apps/include
+CXX_SOURCES += $(FDIR)/src/io_stream.cpp
 CXX_SOURCES += $(FDIR)/src/jspace.cpp
 CXX_SOURCES += $(FDIR)/src/network.cpp
 CXX_SOURCES += $(FDIR)/src/properties.cpp
@@ -39,6 +40,7 @@ CXX_SOURCES += $(FDIR)/src/spike_encoding.cpp
 
 INCLUDE += -I$(PDIR)/include
 CXX_SOURCES += $(PDIR)/src/processor.cpp
+CXX_SOURCES += $(PDIR)/src/static_proc.cpp
 
 VIZ_NET = $(shell pwd)/networks/difference_risp_train.txt
 VIZ_HOST = "localhost"
