--- a/sketches/esp32/rx/Makefile
+++ b/sketches/esp32/rx/Makefile
@@ -1,7 +1,8 @@
-SKETCH = nano
+SKETCH = rx
 
 # For complete list run arduino-cli board listall
-FQBN = esp32:esp32:um_tinypico
+# FQBN = esp32:esp32:um_tinypico
+FQBN =esp32:esp32:um_tinys3
 
 PORT = /dev/ttyACM0
 
