Sending from ESP32 TX to Teensy

--- a/sketches/fc/new/Makefile
+++ b/sketches/fc/new/Makefile
@@ -1,18 +1,19 @@
-SKETCH = rx
+SKETCH = new
 
-# For complete list run arduino-cli board listall
-# FQBN = esp32:esp32:um_tinypico
-FQBN =esp32:esp32:um_tinys3
+FQBN = teensy:avr:teensy40
 
-PORT = /dev/ttyACM1
+PORT = /dev/ttyACM0
 
-LIBS = $(HOME)/Documents/Arduino/libraries 
+LIBS = $(HOME)/Documents/Arduino/libraries
 
 build: $(SKETCH).ino
 	arduino-cli compile --libraries $(LIBS) --libraries ../../.. --fqbn $(FQBN) $(SKETCH).ino
 
 flash:
 	arduino-cli upload -p $(PORT) --fqbn $(FQBN) .
+
+clean:
+	rm -rf obj
 
 edit:
 	vim $(SKETCH).ino
