--- a/sketches/new/Makefile
+++ b/sketches/new/Makefile
@@ -1,4 +1,4 @@
-SKETCH = usfs
+SKETCH = new
 
 FQBN = teensy:avr:teensy40
 
@@ -7,7 +7,8 @@ PORT = /dev/ttyACM0
 LIBS = $(HOME)/Documents/Arduino/libraries
 
 build: $(SKETCH).ino
-	arduino-cli compile --libraries $(LIBS) --libraries ../../.. --fqbn $(FQBN) $(SKETCH).ino
+	# arduino-cli compile --libraries $(LIBS) --libraries ../../.. --fqbn $(FQBN) $(SKETCH).ino
+	arduino-cli compile --libraries $(LIBS) --libraries ../.. --fqbn $(FQBN) $(SKETCH).ino
 
 flash:
 	arduino-cli upload -p $(PORT) --fqbn $(FQBN) .
