--- a/sketches/rx/Makefile
+++ b/sketches/rx/Makefile
@@ -1,14 +1,15 @@
-SKETCH = tx
+SKETCH = rx
 
 # For complete list run arduino-cli board listall
-FQBN = esp32:esp32:um_tinypico
+# FQBN = esp32:esp32:um_tinypico
+FQBN =esp32:esp32:um_tinys3
 
-PORT = /dev/ttyUSB1
+PORT = /dev/ttyACM1
 
 LIBS = $(HOME)/Documents/Arduino/libraries 
 
 build: $(SKETCH).ino
-	arduino-cli compile --libraries $(LIBS) --libraries ../../.. --fqbn $(FQBN) $(SKETCH).ino
+	arduino-cli compile --libraries $(LIBS) --libraries ../.. --fqbn $(FQBN) $(SKETCH).ino
 
 flash:
 	arduino-cli upload -p $(PORT) --fqbn $(FQBN) .
