--- a/sketches/usfs/Makefile
+++ b/sketches/usfs/Makefile
@@ -1,4 +1,4 @@
-SKETCH = new
+SKETCH = usfs
 
 FQBN = teensy:avr:teensy40
 
@@ -7,7 +7,7 @@ PORT = /dev/ttyACM0
 LIBS = $(HOME)/Documents/Arduino/libraries
 
 build: $(SKETCH).ino
-	arduino-cli compile --libraries $(LIBS) --libraries ../../.. --fqbn $(FQBN) $(SKETCH).ino
+	arduino-cli compile --libraries $(LIBS) --libraries ../.. --fqbn $(FQBN) $(SKETCH).ino
 
 flash:
 	arduino-cli upload -p $(PORT) --fqbn $(FQBN) .
