--- a/examples/rx/Makefile
+++ b/examples/rx/Makefile
@@ -1,9 +1,9 @@
-SKETCH = nano
+SKETCH = rx
 
 # For complete list run arduino-cli board listall
 FQBN = esp32:esp32:um_tinypico
 
-PORT = /dev/ttyACM1
+PORT = /dev/ttyACM0
 
 LIBS = $(HOME)/Documents/Arduino/libraries 
 
