Using Serial2 for both receiver and telemetry

--- a/examples/fc/standard/Makefile
+++ b/examples/fc/standard/Makefile
@@ -2,7 +2,7 @@ SKETCH = standard
 
 FQBN = teensy:avr:teensy40
 
-PORT = /dev/ttyACM1
+PORT = /dev/ttyACM0
 
 LIBS = $(HOME)/Documents/Arduino/libraries
 
@@ -19,4 +19,4 @@ edit:
 	vim $(SKETCH).ino
 
 listen:
-	miniterm.py $(PORT) 115200
+	miniterm.py $(PORT) 115200 --exit-char 3 # exit on CTRL-C
