--- a/rpi/Makefile
+++ b/rpi/Makefile
@@ -1,9 +1,7 @@
 # 
-#  Run TeNNLab spiking neural network
-#
 #  Copyright (C) 2025 Simon D. Levy
 #
-#  This program is free software: you can redistribute it and/or modify
+# This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation, in version 3.
 #
@@ -25,26 +23,43 @@ FDIR = $(HOME)/Desktop/framework
 
 PDIR =  $(FDIR)/processors/risp
 
-INCLUDE += -I$(FDIR)/include -I$(FDIR)/include/utils -I$(FDIR)/cpp-apps/include
-CXX_SOURCES += $(FDIR)/src/io_stream.cpp
-CXX_SOURCES += $(FDIR)/src/jspace.cpp
-CXX_SOURCES += $(FDIR)/src/network.cpp
-CXX_SOURCES += $(FDIR)/src/properties.cpp
-CXX_SOURCES += $(FDIR)/src/spike_encoding.cpp
+INCLUDE += -I$(FDIR)/include -I$(FDIR)/include/utils -I$(FDIR)/cpp-apps/include \
+    -I$(PDIR)/include
 
-INCLUDE += -I$(PDIR)/include
-CXX_SOURCES += $(PDIR)/src/processor.cpp
-CXX_SOURCES += $(PDIR)/src/static_proc.cpp
+FSRC = $(FDIR)/src
+PSRC = $(PDIR)/src
 
 # ----------------------------------------------------------------------------
 
 all: snn
 
-snn: main.o
+snn: main.o io_stream.o jspace.o network.o properties.o spike_encoding.o \
+	processor.o static_proc.o
 	g++ -o snn main.o
 
 main.o: main.cpp
-	g++ $(CFLAGS) -c main.cpp
+	g++ $(CFLAGS) $(INCLUDE) -c main.cpp
+
+io_stream.o: $(FSRC)/io_stream.cpp
+	g++ $(CFLAGS) $(INCLUDE) -c $(FSRC)/io_stream.cpp
+
+jspace.o: $(FSRC)/jspace.cpp
+	g++ $(CFLAGS) $(INCLUDE) -c $(FSRC)/jspace.cpp
+
+network.o: $(FSRC)/network.cpp
+	g++ $(CFLAGS) $(INCLUDE) -c $(FSRC)/network.cpp
+
+properties.o: $(FSRC)/properties.cpp
+	g++ $(CFLAGS) $(INCLUDE) -c $(FSRC)/properties.cpp
+
+spike_encoding.o: $(FSRC)/spike_encoding.cpp
+	g++ $(CFLAGS) $(INCLUDE) -c $(FSRC)/spike_encoding.cpp
+
+processor.o: $(PSRC)/processor.cpp
+	g++ $(CFLAGS) $(INCLUDE) -c $(PSRC)/processor.cpp
+
+static_proc.o: $(PSRC)/static_proc.cpp
+	g++ $(CFLAGS) $(INCLUDE) -c $(PSRC)/static_proc.cpp
 
 edit:
 	vim main.cpp
