Fixed $HOME problem for Webots SNN

--- a/webots/controllers/snn/Makefile
+++ b/webots/controllers/snn/Makefile
@@ -40,6 +40,10 @@ USE_C_API = true
 VERBOSE = 1
 
 run:
+	webots ../../worlds/snn.wbt &
+	/usr/local/webots/webots-controller --stdout-redirect $(NAME)
+
+viz:
 	$(FDIR)/spike_client/spike_client.py localhost &
 	webots ../../worlds/snn.wbt &
 	/usr/local/webots/webots-controller --stdout-redirect $(NAME)
