Begin MSP for spikes

--- a/examples/spiketest/Makefile
+++ b/examples/spiketest/Makefile
@@ -6,14 +6,16 @@ EDIR = $(HOME)/Desktop/embedded-neuromorphic/arduino/encoder-decoder
 
 NETWORK = difference_risp_train
 
-FQBN = teensy:avr:teensy40
+# FQBN = teensy:avr:teensy40
+FQBN = teensy:avr:teensy41
 
 PORT = /dev/ttyACM0
 
 LIBS = $(HOME)/Documents/Arduino/libraries
 
 build: $(SKETCH).ino $(NETWORK).hpp 
-	arduino-cli compile --libraries $(LIBS) --libraries $(EDIR) --fqbn $(FQBN) $(SKETCH).ino
+	arduino-cli compile --libraries $(LIBS) --libraries $(EDIR) --libraries ../../..
+		--fqbn $(FQBN) $(SKETCH).ino
 
 $(NETWORK).hpp:
 	$(EDIR)/compiler.py $(FDIR)/networks/$(NETWORK).txt
