--- a/feather/motors/Makefile
+++ b/feather/motors/Makefile
@@ -1,17 +1,18 @@
-SKETCH = feather
+SKETCH = motors
 
 FQBN = STMicroelectronics:stm32:GenF4:pnum=FEATHER_F405,usb=CDCgen
+
+BIN = build/$(SKETCH).ino.bin
 
 PORT = /dev/ttyACM0
 
 LIBS = $(HOME)/Documents/Arduino/libraries
 
-BIN = build/$(SKETCH).ino.bin
-
 $(BIN): $(SKETCH).ino
-	arduino-cli compile --libraries $(LIBS) --fqbn $(FQBN) --output-dir=./build $(SKETCH).ino
+	arduino-cli compile --libraries $(LIBS) \
+	--output-dir=./build --fqbn $(FQBN) $(SKETCH).ino
 
-flash: $(BIN)
+flash:
 	dfu-util -a 0 -s 0x08000000:leave -D $(BIN)
 
 clean:
