--- a/examples/standard/Makefile
+++ b/examples/standard/Makefile
@@ -9,7 +9,8 @@ LIBS = $(HOME)/Documents/Arduino/libraries
 BIN = build/$(SKETCH).ino.bin
 
 $(BIN): $(SKETCH).ino Makefile
-	arduino-cli compile --libraries $(LIBS) --fqbn $(FQBN) --output-dir=./build $(SKETCH).ino
+	arduino-cli compile --libraries $(LIBS) --libraries ../../.. \
+		--fqbn $(FQBN) --output-dir=./build $(SKETCH).ino
 
 flash: $(BIN)
 	dfu-util -d 0483:5740 -a 0 -s 0x08000000:leave -D $(BIN)
