renamed:    src/control/haskell.cpp -> src/control/haskell.hpp renamed:    src/control/standard.cpp -> src/control/standard.hpp

--- a/bolt/Makefile
+++ b/bolt/Makefile
@@ -105,7 +105,7 @@ unbrick:
 standard_config:
 	ln -sf $(HOME)/.arduino15/packages/STMicroelectronics/ vendor
 	ln -sf $(ARDUINO_LIBS)/vl53l1x-arduino vendor
-	cp $(HACKFLIGHT)/src/control/standard.cpp $(HACKFLIGHT)/bolt/src/control_standard.cpp
+	cp $(HACKFLIGHT)/src/control/standard.hpp $(HACKFLIGHT)/src/control.hpp
 	cp $(HACKFLIGHT)/bolt/src/Kbuild.standard $(HACKFLIGHT)/bolt/src/Kbuild
 	cd $(HACKFLIGHT)/msppg; make install; cd ..
 
@@ -115,7 +115,7 @@ haskell_config:
 	runhaskell -i$(HASKDIR) -i$(HASKDIR)/pids $(HASKDIR)/Pids.hs -i$(PWD)
 	mv copilot_core.c $(HACKFLIGHT)/bolt/src/copilot_core.cpp
 	mv copilot*.h $(HACKFLIGHT)/bolt/src/
-	cp $(HACKFLIGHT)/src/control/haskell.cpp $(HACKFLIGHT)/bolt/src/control_haskell.cpp
+	cp $(HACKFLIGHT)/src/control/haskell.hpp $(HACKFLIGHT)/src/control.hpp
 	cp $(HACKFLIGHT)/bolt/src/Kbuild.haskell $(HACKFLIGHT)/bolt/src/Kbuild
 	cd $(HACKFLIGHT)/msppg; make install; cd ..
 
@@ -123,6 +123,6 @@ clean:
 	rm -rf build/*.bin build/*.elf build/*.hex build/*.map build/include/ \
 		src/copilot* build/.firmware.cmd build/Makefile build/scripts build/vendor \
 		src/Kbuild build/src build/source $(PROG).bin *.elf  *.hex *.map *.dfu copilot* \
-	    vendor/STMicroelectronics  vendor/vl53l1x-arduino src/control.cpp
+	    vendor/STMicroelectronics  vendor/vl53l1x-arduino src/control.hpp
 	find . -name "*.o" -type f -delete
 	find . -name ".*.o*" -type f -delete
