--- a/webots/controllers/controller/Makefile
+++ b/webots/controllers/controller/Makefile
@@ -50,9 +50,8 @@ runhaskell:
 
 runsnn:
 	cp ../../plugins/physics/snn/libsnn.so ../../plugins/physics/custom/libcustom.so
-	$(HOME)/Desktop/spikeplotter/spikeplot.py  -f $(VIZ_NET) \
-		-a localhost -p $(VIZ_PORT) --ids '0,1,2,3,4,10,11,20' \
-		--display-counts &
+	#$(HOME)/Desktop/spikeplotter/spikeplot.py  -f $(VIZ_NET)  -a localhost \
+	#	-p $(VIZ_PORT) --ids '0,1,2,3,4,10,11,20' --display-counts &
 	webots ../../worlds/simple.wbt &
 	/usr/local/webots/webots-controller --stdout-redirect $(NAME)
 
