renamed:    webots/plugins/physics/snn/snn.cpp -> webots/plugins/physics/snn/control.hpp

--- a/webots/plugins/physics/snn/Makefile
+++ b/webots/plugins/physics/snn/Makefile
@@ -19,7 +19,7 @@ CFLAGS = -O3 -std=c++11 -Wall -Wextra
 
 INCLUDE = -I../../../simsrc -I../../../../src
 
-CXX_SOURCES = snn.cpp ../support.cpp
+CXX_SOURCES = ../support.cpp
 
 # TeNNLab framework stuff ----------------------------------------------------
 
