new file:   blink/.gitignore

--- a/examples/blink/Makefile
+++ b/examples/blink/Makefile
@@ -1,4 +1,4 @@
-SKETCH = standard
+SKETCH = blink
 
 FQBN = teensy:avr:teensy40
 
@@ -11,7 +11,6 @@ SRC = ../../src/
 
 build:
 	cp FreeRTOSConfig.h $(SRC)
-	cp $(SRC)/control/standard.hpp $(SRC)/control.hpp
 	arduino-cli compile  --libraries ../../.. --libraries $(HOME)/Documents/Arduino/libraries \
 		--fqbn $(FQBN) $(SKETCH).ino
 	rm ../../src/FreeRTOSConfig.h
