--- a/msppg/Makefile
+++ b/msppg/Makefile
@@ -1,5 +1,6 @@
 install: messages.json msppg.py
-	python3 msppg.py
+	#python3 msppg.py
+	python msppg.py
 	cp msp.py ../clients/
 	cp messages.h ../src/msp/
 
